--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>Index page html page</h1>
+    <input type="text" id="username" />
+    <input type="password" id="password" />
+    <button id="button">submit</button>
+    <script src="script.js"></script>
   </body>
 </html>
